<?xml version="1.0" encoding="utf-8"?>

<!--
    Copyright 2017 Roy Van Liew

    Licensed under the Apache License, Version 2.0 (the "License");
    you may not use this file except in compliance with the License.
    You may obtain a copy of the License at

        http://www.apache.org/licenses/LICENSE-2.0

    Unless required by applicable law or agreed to in writing, software
    distributed under the License is distributed on an "AS IS" BASIS,
    WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
    See the License for the specific language governing permissions and
    limitations under the License.
-->

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="10dp"
        tools:context="org.sosuml.sosumlapp.RegisterForm">

        <!-- Registration Header -->
        <TextView
            android:id="@+id/registerFormHeader"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_marginBottom="10dp"
            android:layout_centerHorizontal="true"
            android:text="@string/register_form_header"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <!-- Step 1 Section -->
        <TextView
            android:id="@+id/registerFormStep1Header"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_below="@id/registerFormHeader"
            android:layout_centerHorizontal="true"
            android:text="@string/register_form_step1_header"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/registerFormStep1Info"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_below="@id/registerFormStep1Header"
            android:layout_centerHorizontal="true"
            android:gravity="center"
            android:text="@string/register_form_step1_info"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <Button
            android:id="@+id/registerFormBtnSelectEmail"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginBottom="20dp"
            android:layout_centerHorizontal="true"
            android:layout_below="@id/registerFormStep1Info"
            android:text="@string/register_form_btn_config" />

        <!-- Step 2 Section -->
        <TextView
            android:id="@+id/registerFormStep2Header"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_below="@id/registerFormBtnSelectEmail"
            android:layout_centerHorizontal="true"
            android:text="@string/register_form_step2_header"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/registerFormStep2Info"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_below="@id/registerFormStep2Header"
            android:layout_centerHorizontal="true"
            android:gravity="center"
            android:text="@string/register_form_step2_info"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <!-- Step 2 Form -->
        <GridLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:columnCount="1"
            android:rowCount="5"
            android:useDefaultMargins="true"
            android:id="@+id/registerFormGridLayout"
            android:layout_below="@id/registerFormStep2Info"
            android:layout_centerHorizontal="true">

            <!-- Name -->
            <TextView
                android:id="@+id/registerFormLblName"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_column="0"
                android:layout_gravity="center|fill"
                android:layout_row="0"
                android:text="@string/register_form_name" />

            <EditText
                android:id="@+id/registerFormTxtName"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_column="0"
                android:layout_gravity="center|fill"
                android:layout_row="1"
                android:inputType="text" />

            <!-- Email -->
            <TextView
                android:id="@+id/registerFormLblEmail"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_column="0"
                android:layout_gravity="center|fill"
                android:layout_row="2"
                android:text="@string/register_form_email" />

            <EditText
                android:id="@+id/registerFormTxtEmail"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_column="0"
                android:layout_gravity="center|fill"
                android:layout_row="3"
                android:inputType="textEmailAddress" />

            <!-- Register Button -->
            <Button
                android:id="@+id/registerFormBtnRegister"
                android:layout_width="100dp"
                android:layout_height="50dp"
                android:layout_column="0"
                android:layout_gravity="center|fill"
                android:layout_row="4"
                android:text="@string/register_form_btn_register" />

        </GridLayout>

        <!-- Step 3 for checking registration -->
        <TextView
            android:id="@+id/registerFormRegCheck"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/registerFormGridLayout"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:text="Step 3"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <Button
            android:id="@+id/registerFormBtnCheck"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:layout_width="250dp"
            android:layout_height="50dp"
            android:layout_centerHorizontal="true"
            android:layout_below="@id/registerFormRegCheck"
            android:text="@string/register_form_btn_check" />

    </RelativeLayout>
</ScrollView>